--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<link rel="stylesheet" href="styles.css">
+	<title>Andrew Koza</title>
+</head>
+<header>
+<h1>I'm Andrew</h1>	
+</header>
+	
+<body>
+	<h1>I'm a software engineer and a game developer</h1>
+	<h2>I do things</h2>
+	<p>I'm a software engineer, game developer, and I do things</p>
+</body>
+</html>
 
