a little bit of work

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 	<title>Andrew Koza</title>
 </head>
 <header>
-<h1>I'm Andrew</h1>	
+	<nav>
+		<a href="index.html">Home</a>
+	</nav>
 </header>
 	
 <body>
+	<h1>I'm Andrew</h1>	
 	<h1>I'm a software engineer and a game developer</h1>
 	<h2>I do things</h2>
 	<p>I'm a software engineer, game developer, and I do things</p>
