--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<link rel="stylesheet" href="styles.css">
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="styles.css">
 	<title>Andrew Koza</title>
 </head>
+
 <header>
 	<nav>
 		<a href="index.html">Home</a>
+		<a href="about.html">About</a>
+		<a href="games.html">Games</a>
+		<a href="projects.html">Projects</a>
 	</nav>
 </header>
-	
-<body>
-	<h1>I'm Andrew</h1>	
-	<h1>I'm a software engineer and a game developer</h1>
-	<h2>I do things</h2>
-	<p>I'm a software engineer, game developer, and I do things</p>
-</body>
-</html>
 
+<body>
+	<h1>Hello, I'm Andrew <br>
+		I'm a software engineer and a game developer</h1>
+	<p>I also do things</p>
+</body>
+
+</html>
