Lots of content and design updates

--- a/about.html
+++ b/about.html
@@ -7,17 +7,18 @@
     <title>Andrew Koza</title>
 </head>
 
-<header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="games.html">Games</a>
-        <a href="projects.html">Projects</a>
-    </nav>
-</header>
-
 <body>
-    <p>I'm a massive nerd, and I felt like telling you all about it. <br>
+    <header>
+        <nav>
+            <a class="nav-element" href="index.html">Home</a>
+            <a class="nav-element" href="about.html">About</a>
+            <a class="nav-element" href="games.html">Games</a>
+            <a class="nav-element" href="projects.html">Projects</a>
+        </nav>
+    </header>
+    <h1>About Me</h1>
+    <p>I'm graduating in the spring with a BS in Computer Science. I am a software developer,
+        and can work in C#, Java, and Python. My biggest passion is working on games and making them come to life. <br>
         oh and I have an art degree.</p>
 </body>
 
