--- a/games.html
+++ b/games.html
@@ -7,17 +7,29 @@
     <title>Andrew Koza</title>
 </head>
 
-<header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="games.html">Games</a>
-        <a href="projects.html">Projects</a>
-    </nav>
-</header>
+
 
 <body>
-    <p>I made this game by myself, check it out</p>
+    <header>
+        <nav>
+            <a class="nav-element" href="index.html">Home</a>
+            <a class="nav-element" href="about.html">About</a>
+            <a class="nav-element" href="games.html">Games</a>
+            <a class="nav-element" href="projects.html">Projects</a>
+        </nav>
+    </header>
+    <h1>Here's some games I've worked on</h1>
+    <h2>Brushlings: Pale Moon</h2>
+    <p>
+        <img class="game-image" src="brushlings logo.jpg" alt="Brushlings logo">
+        I worked on this game as the main optimization programmer. My responsibilities primarily involved
+        programming the game systems that would allow for the game to run in an open world, such as LOD, occlusion culling,
+        and similar concepts. I am also responsible for general code inspection, cleaning up slower bits of code to help the
+        game run faster. You can view the game on Steam 
+        <a href="https://store.steampowered.com/app/1409350/Brushlings_Pale_Moon/">here.</a>
+    </p>
+    <h1>Here's some games I've made myself</h1>
+    <h2>Heroes of Terris</h2>
 </body>
 
 </html>
