--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
 	<title>Andrew Koza</title>
 </head>
 
-<header>
-	<nav>
-		<a href="index.html">Home</a>
-		<a href="about.html">About</a>
-		<a href="games.html">Games</a>
-		<a href="projects.html">Projects</a>
-	</nav>
-</header>
+
 
 <body>
-	<h1>Hello, I'm Andrew <br>
-		I'm a software engineer and a game developer</h1>
-	<p>I also do things</p>
+	<header>
+		<nav>
+			<a class="nav-element" href="index.html">Home</a>
+			<a class="nav-element" href="about.html">About</a>
+			<a class="nav-element" href="games.html">Games</a>
+			<a class="nav-element" href="projects.html">Projects</a>
+		</nav>
+	</header>
+	
+	<div class="main-page-body">
+		<h1>Hello, I'm Andrew <br>
+			I'm a software engineer and a game developer</h1>
+		<p>I also play guitar and work with 3D printers</p>
+	</div>
 </body>
 
 </html>
