--- a/projects.html
+++ b/projects.html
@@ -7,17 +7,20 @@
     <title>Andrew Koza</title>
 </head>
 
-<header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="games.html">Games</a>
-        <a href="projects.html">Projects</a>
-    </nav>
-</header>
-
 <body>
-    <p>I'm developing this app for fun</p>
+    <header>
+		<nav>
+			<a class="nav-element" href="index.html">Home</a>
+			<a class="nav-element" href="about.html">About</a>
+			<a class="nav-element" href="games.html">Games</a>
+			<a class="nav-element" href="projects.html">Projects</a>
+		</nav>
+	</header>
+    <h1>here's some various projects I've done in my free time</h1>
+    <h2>Guild Wars 2 Companion App</h2>
+    <p>I started programming this during the downtime I had due to the Covid-19 pandemic. I thought building an API app
+        for a game I thorougly enjoy would be a good learning experience for my future.
+    </p>
 </body>
 
 </html>
